JShell support for J2SE projects targetting JDK9