@@ -44,8 +44,10 @@ package org.netbeans.modules.jshell.project;
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -54,17 +56,24 @@ import org.netbeans.api.debugger.Session;
 import org.netbeans.api.java.classpath.ClassPath;
 import org.netbeans.api.java.platform.JavaPlatform;
 import org.netbeans.api.java.platform.JavaPlatformManager;
+import org.netbeans.api.java.platform.Specification;
 import org.netbeans.api.java.project.JavaProjectConstants;
 import org.netbeans.api.java.queries.BinaryForSourceQuery;
 import org.netbeans.api.java.queries.UnitTestForSourceQuery;
+import org.netbeans.api.java.source.ClassIndex.SearchScope;
+import org.netbeans.api.java.source.ClasspathInfo;
+import org.netbeans.api.java.source.ClasspathInfo.PathKind;
+import org.netbeans.api.java.source.SourceUtils;
 import org.netbeans.api.project.Project;
 import org.netbeans.api.project.ProjectManager;
 import org.netbeans.api.project.SourceGroup;
 import org.netbeans.modules.java.j2seproject.api.J2SEPropertyEvaluator;
 import org.netbeans.modules.jshell.launch.PropertyNames;
+import org.netbeans.spi.java.classpath.support.ClassPathSupport;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
 import org.openide.filesystems.URLMapper;
+import org.openide.modules.SpecificationVersion;
 import org.openide.util.Exceptions;
 
 /**
@@ -120,7 +129,8 @@ public final class ShellProjectUtils {
     public static JavaPlatform findPlatform(ClassPath bootCP) {
         Set<URL> roots = to2Roots(bootCP);
         for (JavaPlatform platform : JavaPlatformManager.getDefault().getInstalledPlatforms()) {
-            if (roots.containsAll(to2Roots(platform.getBootstrapLibraries()))) {
+            Set<URL> platformRoots = to2Roots(platform.getBootstrapLibraries());
+            if (platformRoots.containsAll(roots)) {
                 return platform;
             }
         }
@@ -133,6 +143,153 @@ public final class ShellProjectUtils {
             roots.add(e.getURL());
         }
         return roots;
+    }
+    
+    /**
+     * Returns set of modules imported by the project. Adds to the passed collection
+     * if not null. Module names from `required' clause will be returned
+     * 
+     * @param project the project
+     * @param in optional; the collection
+     * @return original collection or a new one with imported modules added
+     */
+    public static Collection<String> findProjectImportedModules(Project project, Collection<String> in) {
+        Collection<String> result = in != null ? in : new HashSet<>();
+        
+        for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
+            if (isNormalRoot(sg)) {
+                ClasspathInfo cpi = ClasspathInfo.create(sg.getRootFolder());
+                ClassPath mcp = cpi.getClassPath(PathKind.COMPILE);
+                
+                for (FileObject r : mcp.getRoots()) {
+                    URL u = URLMapper.findURL(r, URLMapper.INTERNAL);
+                    String modName = SourceUtils.getModuleName(u);
+                    if (modName != null) {
+                        result.add(modName);
+                    }
+                }
+            }
+        }
+        
+        return result;
+    }
+    
+    public static Set<String>   findProjectModules(Project project, Set<String> in) {
+        Set<String> result = in != null ? in : new HashSet<>();
+        
+        for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
+            if (isNormalRoot(sg)) {
+                URL u = URLMapper.findURL(sg.getRootFolder(), URLMapper.INTERNAL);
+                BinaryForSourceQuery.Result r = BinaryForSourceQuery.findBinaryRoots(u);
+                for (URL u2 : r.getRoots()) {
+                    String modName = SourceUtils.getModuleName(u2, true);
+                    if (modName != null) {
+                        result.add(modName);
+                    }
+                }
+            }
+        }
+        return result;
+    }
+
+    /**
+     * Collects project modules and packages from them.
+     * For each modules, provides a list of (non-empty) packages from that module.
+     * @param project
+     * @return 
+     */
+    public static Map<String, Collection<String>>   findProjectModulesAndPackages(Project project) {
+        Map<String, Collection<String>> result = new HashMap<>();
+        
+        for (SourceGroup sg : org.netbeans.api.project.ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)) {
+            if (isNormalRoot(sg)) {
+                URL u = URLMapper.findURL(sg.getRootFolder(), URLMapper.INTERNAL);
+                BinaryForSourceQuery.Result r = BinaryForSourceQuery.findBinaryRoots(u);
+                for (URL u2 : r.getRoots()) {
+                    String modName = SourceUtils.getModuleName(u2, true);
+                    if (modName != null) {
+                        FileObject root2 = URLMapper.findFileObject(u2);
+                        FileObject root = URLMapper.findFileObject(u);
+                        Collection<String> pkgs = getPackages(root); //new HashSet<>();
+                        /*
+                        Enumeration en = root.getChildren(true);
+                        while (en.hasMoreElements()) {
+                            FileObject d = (FileObject)en.nextElement();
+                            if (!d.isFolder() || !Utilities.isJavaIdentifier(d.getNameExt())) {
+                                continue;
+                            }
+                            pkgs.add(FileUtil.getRelativePath(root, d).replace("/", "."));
+                        }
+                        */
+                        if (!pkgs.isEmpty()) {
+                            Collection<String> oldPkgs = result.get(modName);
+                            if (oldPkgs != null) {
+                                oldPkgs.addAll(pkgs);
+                            } else {
+                                result.put(modName, pkgs);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        return result;
+    }
+    
+    private static Collection<String> getPackages(FileObject root) {
+        ClasspathInfo cpi = ClasspathInfo.create(root);
+        ClasspathInfo rootCpi = new ClasspathInfo.Builder(
+                cpi.getClassPath(PathKind.BOOT)).
+                setSourcePath(
+                    ClassPathSupport.createClassPath(root)
+                ).build();
+        
+        Collection<String> pkgs = new HashSet<>(rootCpi.getClassIndex().getPackageNames("", false, 
+                Collections.singleton(SearchScope.SOURCE)));
+        pkgs.remove(""); // NOI18N
+        return pkgs;
+    }
+    
+    public static boolean isModularJDK(JavaPlatform pl) {
+        if (pl != null) {
+            Specification plSpec = pl.getSpecification();
+            SpecificationVersion jvmversion = plSpec.getVersion();
+            if (jvmversion.compareTo(new SpecificationVersion("9")) >= 0) {
+                return true;
+            }
+        }
+        return false;
+    }
+    
+    public static List<String> launchVMOptions(Project project) {
+        Collection<String> exportMods = ShellProjectUtils.findProjectImportedModules(project, 
+                ShellProjectUtils.findProjectModules(project, null));
+        ShellProjectUtils.findProjectModules(project, null);
+        boolean modular = isModularJDK(findPlatform(project));
+        if (exportMods.isEmpty() || !modular) {
+            return null;
+        }
+        List<String> addReads = new ArrayList<>();
+        for (String mod : exportMods) {
+            addReads.add(
+                String.format("--add-reads %s=ALL-UNNAMED",mod) // NOI18N
+            );
+        }
+        addReads.add("--add-modules jdk.jshell");
+        addReads.add("--add-reads jdk.jshell=ALL-UNNAMED"); // NOI18N
+        
+        // now export everything from the project:
+        Map<String, Collection<String>> packages = ShellProjectUtils.findProjectModulesAndPackages(project);
+        for (Map.Entry<String, Collection<String>> en : packages.entrySet()) {
+            String p = en.getKey();
+            Collection<String> vals = en.getValue();
+
+            for (String v : vals) {
+                addReads.add(String.format("--add-exports %s/%s=ALL-UNNAMED", 
+                        p, v));
+            }
+        }
+        return addReads;
     }
     
     public static FileObject findProjectRoots(Project project, List<URL> urls) {
